...
import androidx.compose.ui.window.Dialog
import com.example.mycitiessearch.R
import com.example.mycitiessearch.domain.models.CityModel
import com.example.mycitiessearch.presentation.ui.theme.MyCitiesSearchTheme

private const val CITY_TOOLBAR_TAG = "MapToolbarTitle"
private const val CITY_TOOLBAR_SEARCH_TITLE_TAG = "CityToolbarSearchTitle"
private const val CITY_TOOLBAR_SEARCH_ICON_TAG = "CityToolbarSearchIcon"
private const val CITY_TOOLBAR_FILTER_ICON_TAG = "CityToolbarFilterIcon"
private const val CITY_TOOLBAR_CLEAR_ICON_TAG = "CityToolbarClearIcon"
private const val CITY_DETAIL_DIALOG_TAG = "CityDetailDialog"
private const val CITY_DETAIL_DIALOG_CLOSE_ICON_TAG = "CityDetailDialogCloseIcon"
private const val CITY_DETAIL_DIALOG_CITY_ICON_TAG = "CityDetailDialogCityIcon"
private const val CITY_DETAIL_DIALOG_FAVORITE_ICON_TAG = "CityDetailDialogFavoriteIcon"
private const val CITY_DETAIL_DIALOG_CITY_TITLE_TAG = "CityDetailDialogCityTitle"
private const val CITY_DETAIL_DIALOG_CITY_TEXT_TAG = "CityDetailDialogCityText"
private const val CITY_DETAIL_DIALOG_COUNTRY_TITLE_TAG = "CityDetailDialogCountryTitle"
private const val CITY_DETAIL_DIALOG_COUNTRY_TEXT_TAG = "CityDetailDialogCountryText"
private const val CITY_DETAIL_DIALOG_LAT_TITLE_TAG = "CityDetailDialogLatTitle"
private const val CITY_DETAIL_DIALOG_LONG_TITLE_TAG = "CityDetailDialogLongTitle"
private const val CITY_ALERT_DIALOG_TAG = "CityAlertDialog"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun SearchToolbar(
    searchText: String,
    isFavoritesFilter: Boolean,
...
