...
import com.example.mycitiessearch.R
import com.example.mycitiessearch.domain.models.CityModel
import com.example.mycitiessearch.presentation.ui.theme.MyCitiesSearchTheme
import com.example.mycitiessearch.presentation.viewmodels.CitiesViewModel
import kotlinx.coroutines.flow.flowOf

private const val CITY_ITEM_TAG = "CityItem"
private const val CITY_ITEM_FAVORITE_ICON_TAG = "CityItemFavoriteIcon"
private const val CITY_ITEM_CITY_TEXT_TAG = "CityItemCityText"
private const val CITY_ITEM_COUNTRY_TEXT_TAG = "CityItemCountryText"
private const val CITY_ITEM_LAT_AND_LONG_TEXT_TAG = "CityItemLatAndLongText"
private const val CITY_ITEM_SEE_BUTTON_TAG = "CityItemSeeButton"
private const val CITY_ITEM_SEE_BUTTON_TEXT_TAG = "CityItemSeeButtonText"

private const val DEFAULT_LIST_INDEX = 0
private const val DEFAULT_WEIGHT = 1f
private const val DEFAULT_LANDSCAPE_WEIGHT = 0.5f

...
